--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+# Jekyll build files
+_site/
+.sass-cache
+.jekyll-cache
+.jekyll-metadata
+vendor
