--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ jekyll-minifier:
   uglifier_args:
     harmony: true
 
+# Jekyll Animate Elements
+animation:
+  enabled: true
+
 # -----------------------------------------------------------------------------
 # Build settings
 # -----------------------------------------------------------------------------
@@ -34,6 +38,7 @@ include: ["_pages"]
 
 plugins:
   - jekyll-3rd-party-libraries
+  - jekyll-animate-elements
   - jekyll-minifier
   - jekyll-polyglot
 
